# boltffi

./: BOLTFFI_TOML_SPEC.md  Cargo.toml  README.md  justfile  renovate.json5
.github/workflows/: ci.yml  release.yml  security.yml
adrs/: 0001-adr-binding-ir-architecture.md
benchmarks/adapters/uniffi/: build-csharp.sh
benchmarks/harnesses/dotnet-bench/: SharedSurfaceBenchmarks.cs  WireReaderBenchmarks.cs
benchmarks/harnesses/swift-macos-bench/: Package.swift
benchmarks/scripts/: audit_benchmark_catalog.py  demo_export_inventory.py  dotnet_benchmark_names.py
boltffi/src/: lib.rs
boltffi_ast/src/: constant.rs  contract.rs  lib.rs  name.rs  record.rs  type_expr.rs
boltffi_bindgen/: Cargo.toml
boltffi_bindgen/src/: lib.rs
boltffi_bindgen/src/ir/: abi.rs  build.rs  definitions.rs  ops.rs  plan.rs
boltffi_bindgen/src/model/: class.rs
boltffi_bindgen/src/render/: error.rs  mod.rs
boltffi_bindgen/src/scan/: boxed_future.rs  cfg_context.rs  compiler_type_resolution.rs  mod.rs
boltffi_binding/src/expand/: mod.rs
boltffi_binding/src/ir/: codec.rs  layout.rs  name.rs  op.rs
boltffi_binding/src/lower/: classes.rs  enums.rs  error.rs  index.rs  methods.rs  mod.rs  records.rs  surface.rs  symbol.rs
boltffi_cli/: Cargo.toml
boltffi_cli/src/: build.rs  cli.rs  config.rs  error.rs  main.rs  target.rs
boltffi_cli/src/commands/: build.rs  generate.rs  init.rs  pack.rs
boltffi_cli/src/pack/: kmp.rs  mod.rs  symbols.rs
boltffi_cli/src/toolchain/: native_host.rs
boltffi_cli/templates/: BoltFFI.CSharp.csproj.xml
boltffi_core/src/: lib.rs  return_buffer.rs
boltffi_core/src/callback/: arc_dyn_passable.rs  mod.rs
boltffi_core/src/passable/: value.rs
boltffi_core/src/runtime/: future.rs
boltffi_core/src/wire/: decode.rs
boltffi_ffi_rules/: Cargo.toml
boltffi_ffi_rules/src/: boxed_future.rs  lib.rs
boltffi_macros/: Cargo.toml
boltffi_macros/src/: abi.rs  lib.rs
boltffi_macros/src/exports/: async_export.rs  callback_return.rs  common.rs  extern_export.rs  function.rs  methods.rs
boltffi_macros/src/index/: callback_traits.rs  exported_classes.rs  mod.rs
boltffi_tests/: Cargo.toml
boltffi_tests/src/: lib.rs
boltffi_tests/tests/: callback_traits.rs
boltffi_verify/tests/: integration.rs
docs/: package-lock.json
examples/demo/: Cargo.toml  README.md  verify-platform-demos.sh
examples/demo/bench_macros/src/: lib.rs
examples/demo/src/: wasm_bench.rs
examples/demo/src/async_fns/: mod.rs
examples/demo/src/builtins/: mod.rs
examples/demo/src/bytes/: mod.rs
examples/demo/src/classes/: borrowed.rs  methods.rs  mod.rs
examples/demo/src/custom_types/: mod.rs
examples/demo/src/enums/: c_style.rs  complex_variants.rs  data_enum.rs  repr_int.rs
examples/demo/src/options/: complex.rs  primitives.rs
examples/demo/src/primitives/: scalars.rs  strings.rs  vecs.rs
examples/demo/src/records/: blittable.rs  default_values.rs  mixed.rs  nested.rs  with_collections.rs  with_enums.rs  with_options.rs  with_strings.rs
examples/demo/src/results/: async_results.rs  basic.rs  error_enums.rs  nested_results.rs
runtime/typescript/: package-lock.json  package.json
runtime/typescript/src/: index.ts  module.ts
(+203 files in other folders)
