[package]
name = "demo"
version = "0.1.0"
edition = "2024"

[features]
default = []
uniffi = ["dep:uniffi"]
wasm-bench = ["dep:serde", "dep:serde-wasm-bindgen", "dep:wasm-bindgen", "dep:wasm-bindgen-futures"]

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
boltffi = { path = "../../boltffi", features = ["chrono"] }
boltffi_core = { path = "../../boltffi_core", features = ["chrono"] }
chrono = "0.4"
demo_bench_macros = { path = "bench_macros" }
serde = { version = "1.0", features = ["derive"], optional = true }
serde-wasm-bindgen = { version = "0.6.5", optional = true }
uniffi = { version = "0.31", optional = true }
# pinned so boltffi_bindgen's isolated type-resolution workspace resolves the same uuid/url as `cargo check`
# on this crate, avoiding duplicate semver-compatible patch releases and trait-coherence failures.
uuid = { version = "=1.23.1", default-features = false, features = ["std"] }
url = { version = "=2.5.8", default-features = false, features = ["std"] }
wasm-bindgen = { version = "0.2.108", optional = true }
wasm-bindgen-futures = { version = "0.4.48", optional = true }
